@@ -193,9 +193,6 @@ SET(WTF_INCLUDE_DIRECTORIES
     "${THIRDPARTY_DIR}"
 )
 
-SET(WTF_LIBRARIES
-)
-
 IF (ENABLE_FAST_MALLOC)
     LIST(APPEND WTF_SOURCES
         TCSystemAlloc.cpp
